# tg_bot

./: Dockerfile  main.py  pyproject.toml  requirements.txt
app/: __init__.py  handlers.py  routes.py  settings.py
config/: __init__.py  config.yaml
templates/: index.html
