[tool.poetry]
name = "millionare-webapp"
version = "0.0.1"
description = ""
authors = ["DenFalcon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
asyncio = "^3.4.3"
aiogram = "^3.3.0"
jinja2 = "^3.1.3"
aiohttp-jinja2 = "^1.6"
sqlalchemy = "^2.0.25"
pyyaml = "^6.0.1"

[tool.pyright]
venvPath = "/home/denchek/.cache/pypoetry/virtualenvs/"
venv = "millionare-webapp-l9XEuZpT-py3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
